--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -49,3 +49,7 @@ a.underbar-active span:before {
 a.underbar:hover span:before {
   width: 100%;
 }
+.bottom-bar {
+  height: calc(3rem + env(safe-area-inset-bottom));
+  padding-bottom: env(safe-area-inset-bottom);
+}
