update font files for all devices + add posts by category page

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -6,8 +6,14 @@
 
 @font-face {
   font-family: "Brown";
-  src: url("/fonts/brown/Brown-Regular.woff") format("woff");
+  src: url('/fonts/brown/brown.eot'); 
+  src: url('/fonts/brown/brown.eot?#iefix') format('embedded-opentype'), 
+       url('/fonts/brown/brown.woff2') format('woff2'), 
+       url('/fonts/brown/brown.woff') format('woff'), 
+       url('/fonts/brown/brown.ttf')  format('truetype'), 
+       url('/fonts/brown/brown.svg#svgFontName') format('svg');
 }
+
 
 body {
   @apply text-black dark:text-white bg-white dark:bg-gray-900;
