--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -4,7 +4,7 @@
 
 /* ####################################### */
 
-@font-face {
+/* @font-face {
   font-family: "Brown";
   src: url('/fonts/brown/brown.eot'); 
   src: url('/fonts/brown/brown.eot?#iefix') format('embedded-opentype'), 
@@ -12,12 +12,28 @@
        url('/fonts/brown/brown.woff') format('woff'), 
        url('/fonts/brown/brown.ttf')  format('truetype'), 
        url('/fonts/brown/brown.svg#svgFontName') format('svg');
+} */
+
+@font-face {
+  font-family: "Brown Bold";
+  src: url('/fonts/fonts-brown/Brown-Bold.woff2') format('woff2');
 }
 
+@font-face {
+  font-family: "Brown Regular";
+  src: url('/fonts/fonts-brown/Brown-Regular.woff2') format('woff2');
+}
+
+.text-bold {
+  font-family: "Brown Bold";
+}
+/* .text-regular {
+  font-family: "Brown Regular";
+} */
 
 body {
-  @apply text-black dark:text-white bg-white dark:bg-gray-900;
-  font-family: "Brown";
+  @apply text-neutral-900 dark:text-white bg-white dark:bg-gray-900;
+  font-family: "Brown Regular";
   font-size: 16px;
 }
 a {
@@ -27,10 +43,7 @@ a {
   @apply container mx-auto px-3 sm:px-4 lg:px-3 xl:px-0 max-w-6xl
 }
 .logo {
-  @apply text-black dark:text-white;
-  font-size: 22px;
-  line-height: 2rem/* 32px */;
-  font-weight: 700;
+  @apply text-black dark:text-white h-full items-center align-middle text-bold text-xl;
 }
 .h-screen-auth {
   @apply bg-slate-50 dark:bg-gray-800/60;
